Early support for app-basic project
- Add badge icon
- Add New Project Wizard
- Add GoToView / GoToAction Action
- Add Hyperlink Navigation
- Add CreateHtaccessAction
- Code completion for $this in view files

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,5 @@
-javac.source=1.6
+file.reference.gson-2.2.4-for-yii2.jar=release/modules/ext/gson-2.2.4-for-yii2.jar
+javac.source=1.7
 javac.compilerargs=-Xlint -Xlint:-serial
 license.file=LICENSE
 nbm.homepage=https://github.com/nbphpcouncil/nb-yii2-plugin
